js/js.translator/testData/incremental/invalidation/functionTypeInterfaceWithCrossModuleInliner/lib2/l2a.12.kt
fun getString(): String {
    val s: (Int, Int, Int, Int, Int, Int, Int, Int, Int) -> Unit = { _, _, _, _, _, _, _, _, _ -> }
    return "${s::class}"
}
